[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test_pypi_tonywu71"]

[project]
name = 'test-pypi-tonywu71'
version = "0.0.4"
description = 'Test'
authors = [{ name = 'Tony Wu' }]
readme = 'README.md'
requires-python = '>=3.11.6'
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Typing :: Typed',
]
dependencies = ["typer>=0.12.3"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
